# goit-web-hw-11

./: .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.db
docs/: conf.py
migrations/: env.py
migrations/versions/: 4a30787bf3cc_add_users.py  8f22487dfcb4_second.py  9a42c608f20d_first.py  b749f1954ca6_add_verify_for_user.py  e46e43086097_third.py  ebd41bc6cf4a_init.py
src/database/: db.py
src/dtos/: contact.py  dto.py  email.py  user.py
src/entity/: models.py
src/repository/: contacts.py  email.py  users.py
src/routes/: contacts.py  email.py  users.py
src/services/: auth.py  email.py
src/templates/: reset_password.html  reset_password_form.html  verify_email.html
tests/: conftest.py  test_e2e_users.py  test_unit_repository_contacts.py  test_unit_repository_users.py
